# BeetSalad

./: .gitignore  .yamllint  main.py  pyproject.toml
beetwrap/: cli.py
config/: config.secret.yaml.example  config.yaml  genres-tree.custom.yaml  genres-tree.yaml  genres.custom.txt  genres.txt
config/beetsplug/: audiohealth.py  deeprhythm_bpm.py  fetchartextras.py  fetchartist.py  importnotify.py  librosa_key.py  navidrome_sync.py  primaryartist.py  rsgain.py  test.py  typetogenre.py
scripts/: mb_debug.py
