[project]
name = "beet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "beets[autobpm,chroma,discogs,embedart,fetchart,lastgenre,lyrics,scrub,thumbnails,web]>=2.11.0",
    "deeprhythm>=0.0.13",
    "essentia>=2.1b6.dev1389",
    "flask>=3.1.2",
    "langdetect>=1.0.9",
    "librosa>=0.11.0",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "pillow>=12.1.0",
    "pyacoustid>=1.3.0",
    "pylast>=7.0.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
]

[project.scripts]
beet = "beetwrap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["beetwrap"]
